output/dev/onlymethods.err
output prefix: llvm/dev/onlymethods
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'QuickSort'

define void @main() {
entry:
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/onlymethods.llvm" -o "llvm/dev/onlymethods.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/onlymethods.llvm:5:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/onlymethods.llvm.bc" -o "llvm/dev/onlymethods.llvm.s" ... ok
linking:gcc -o "llvm/dev/onlymethods.llvm.exec" "llvm/dev/onlymethods.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/dev/onlymethods.llvm.exec ... ok
